# usct

./: Cargo.toml  LICENSE  README.md
benches/: hyperfine.sh
integrations/omp/: usct-statusline.ts
src/: app.rs  cache.rs  catalog.rs  config.rs  discovery.rs  domain.rs  lib.rs  main.rs  report.rs  session.rs  table.rs  time_range.rs
tests/: contracts.rs
