[package]
name = "usct"
version = "0.2.0"
edition = "2024"
description = "Ultra-speedy coding-agent token cost tracker"
license = "MIT"

[dependencies]
bincode = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
jiff = "0.2"
pico-args = "0.5"
libc = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
